<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appbackground"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/question_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_question_1"
                android:layout_width="300dp"
                android:layout_height="160dp"
                android:contentDescription="@string/morocco_card"
                android:scaleType="centerCrop"
                android:src="@drawable/morocco1" />

            <TextView
                android:id="@+id/text_question_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:padding="8dp"
                android:text="@string/question_1_capital_of_morocco"
                android:textColor="@color/color_text_question"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/answer_question_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/q1_radio_rabat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rabat"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/q1_radio_casablanca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/casablanca"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/q1_radio_marrakech"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marrakech"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_question_2"
                android:layout_width="300dp"
                android:layout_height="160dp"
                android:contentDescription="@string/morocco_card"
                android:scaleType="centerCrop"
                android:src="@drawable/morocco2" />

            <TextView
                android:id="@+id/text_question_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:padding="8dp"
                android:text="@string/question_2_currency_of_morocco"
                android:textColor="@color/color_text_question"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/answer_question_2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp">

                <RadioButton
                    android:id="@+id/q2_radio_moroccan_dollar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moroccan_dollar"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/q2_radio_moroccan_dirham"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moroccan_dirham"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/q2_radio_moroccan_riyal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moroccan_riyal"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_question_3"
                android:layout_width="300dp"
                android:layout_height="160dp"
                android:contentDescription="@string/morocco_card"
                android:scaleType="centerCrop"
                android:src="@drawable/morocco3" />

            <TextView
                android:id="@+id/text_question_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:padding="8dp"
                android:text="@string/question_3_Ramadan_of_morocco"
                android:textColor="@color/color_text_question"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/answer_question_3"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal">

                <CheckBox
                    android:id="@+id/q3_checkbox_fast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="8dp"
                    android:text="@string/fast"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/q3_checkbox_pray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="8dp"
                    android:text="@string/pray"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/q3_checkbox_read_quran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_margin="8dp"
                    android:layout_toEndOf="@id/q3_checkbox_fast"
                    android:text="@string/read_quran"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/q3_checkbox_eat_a_lot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="8dp"
                    android:layout_toEndOf="@id/q3_checkbox_pray"
                    android:padding="8dp"
                    android:text="@string/eat_a_lot"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_question_4"
                android:layout_width="300dp"
                android:layout_height="160dp"
                android:contentDescription="@string/morocco_card"
                android:scaleType="centerCrop"
                android:src="@drawable/morocco4" />

            <TextView
                android:id="@+id/text_question_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:padding="8dp"
                android:text="@string/question_4_british_colony"
                android:textColor="@color/color_text_question"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/answer_question_4"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical"
                android:paddingStart="8dp">

                <RadioButton
                    android:id="@+id/q4_radio_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/q4_radio_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_question_5"
                android:layout_width="300dp"
                android:layout_height="160dp"
                android:contentDescription="@string/morocco_card"
                android:scaleType="centerCrop"
                android:src="@drawable/morocco5" />

            <TextView
                android:id="@+id/text_question_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:padding="8dp"
                android:text="@string/question_5_morocco_colonized"
                android:textColor="@color/color_text_question"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/q5_edittext_answer"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/type_number_of_years"
                android:importantForAutofill="no"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/check_answer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:onClick="checkAnswer"
            android:text="@string/check_answers" />
    </LinearLayout>

</ScrollView>